# game-sfml

./: CMakeLists.txt  main.cpp
Config/: keybinds.ini  window.ini  window2.ini
GUI/: PauseMenu.cpp  PauseMenu.hpp
Map/: Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp
components/: AnimationComponent.cpp  AnimationComponent.hpp  HitboxComponent.cpp  HitboxComponent.hpp  MovementComponent.cpp  MovementComponent.hpp
entities/: Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
gui-components/: gui.cpp  gui.hpp
lib/: Game.cpp  Game.hpp  GraphicsSettings.cpp  GraphicsSettings.hpp  State.cpp  State.hpp
resources/maps/: map1.ini
states/: EditorState.cpp  EditorState.hpp  GameState.cpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  SettingsState.cpp  SettingsState.hpp
